@@ -1,7 +1,7 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
+ *  Copyright (C) 1998--2017  The R Core Team
  *  Copyright (C) 1995, 1996  Robert Gentleman and Ross Ihaka
- *  Copyright (C) 1998--2015  The R Core Team
  *  based on code (C) 1979 and later Royal Statistical Society
  *
  *  This program is free software; you can redistribute it and/or modify
@@ -47,7 +47,7 @@
 #define MLOGICAL_NA -1
 // an "NA_LOGICAL" substitute for Mathlib {only used here, for now}
 
-//attribute_hidden 
+//attribute_hidden
 static void
 qbeta_raw(double alpha, double p, double q, int lower_tail, int log_p,
 	  int swap_01, double log_q_cut, int n_N, double* qb);
@@ -208,7 +208,7 @@ qbeta_raw(double alpha, double p, double q, int lower_tail, int log_p,
 
      * NEW: 'acu' accuracy NOT for squared adjustment, but simple;
      * ---- i.e.,  "new acu" = sqrt(old acu)
-    */
+     */
     double acu = fmax2(acu_min, pow(10., -13. - 2.5/(pp * pp) - 0.5/(a * a)));
     // try to catch  "extreme left tail" early
     double tx, u0 = (la + log(pp) + logbeta) / pp; // = log(x_0)
@@ -221,7 +221,7 @@ qbeta_raw(double alpha, double p, double q, int lower_tail, int log_p,
 
     R_ifDEBUG_printf(
 	"qbeta(%g, %g, %g, lower_t=%d, log_p=%d):%s\n"
-	"  swap_tail=%d, la=%g, u0=%g (bnd: %g (%g)) ",
+	"  swap_tail=%d, la=%#8g, u0=%#8g (bnd: %g (%g)) ",
 	alpha, p,q, lower_tail, log_p,
 	(log_p && (p_ == 0. || p_ == 1.)) ? (p_==0.?" p_=0":" p_=1") : "",
 	swap_tail, la, u0,
@@ -314,16 +314,17 @@ qbeta_raw(double alpha, double p, double q, int lower_tail, int log_p,
     // Problem: If initial u is completely wrong, we make a wrong decision here
     if(swap_choose &&
        (( swap_tail && u >= -exp(  log_q_cut)) || // ==> "swap back"
-	(!swap_tail && u >= -exp(4*log_q_cut) && pp / qq < 1000.))) { // ==> "swap now" (much less easily)
+	(!swap_tail && u >= -exp(4*log_q_cut) && pp / qq < 1000.) // ==> "swap now"
+	   )) {
 	// "revert swap" -- and use_log_x
 	swap_tail = !swap_tail;
 	R_ifDEBUG_printf(" u = %g (e^u = xinbta = %.16g) ==> ", u, xinbta);
-	if(swap_tail) {
+	if(swap_tail) { // "swap now" (much less easily)
 	    a = R_DT_CIv(alpha); // needed ?
 	    la = R_DT_Clog(alpha);
 	    pp = q; qq = p;
 	}
-	else {
+	else { // swap back :
 	    a = p_;
 	    la = R_DT_log(alpha);
 	    pp = p; qq = q;
@@ -337,32 +338,33 @@ qbeta_raw(double alpha, double p, double q, int lower_tail, int log_p,
 /* Careful: "swap now"  should not fail if
    1) the above initial xinbta is "completely wrong"
    2) The correction step can go outside (u_n > 0 ==>  e^u > 1 is illegal)
-   e.g., for
-	qbeta(0.2066, 0.143891, 0.05)
+   e.g., for  qbeta(0.2066, 0.143891, 0.05)
 */
-    }
+    } else R_ifDEBUG_printf("\n");
 
     if(!use_log_x)
-	use_log_x = (u < log_q_cut);//(per default) <==> xinbta = e^u < 4.54e-5
+	use_log_x = (u < log_q_cut);// <==> xinbta = e^u < exp(log_q_cut)
     Rboolean
 	bad_u = !R_FINITE(u),
 	bad_init = bad_u || xinbta > p_hi;
 
-    R_ifDEBUG_printf(" -> u = %g, e^u = xinbta = %.16g, (Newton acu=%g%s)\n",
-	     u, xinbta, acu,
-	     (bad_u ? ", ** bad u **" :
-	      (use_log_x ? ", on u = log(x) scale" : "")));
+    R_ifDEBUG_printf(" -> u = %g, e^u = xinbta = %.16g, (Newton acu=%g%s%s%s)\n",
+		     u, xinbta, acu, (bad_u ? ", ** bad u **" : ""),
+		     ((bad_init && !bad_u) ? ", ** bad_init **" : ""),
+		     (use_log_x ? ", on u = LOG(x) SCALE" : ""));
 
     double u_n = 1.; // -Wall
     tx = xinbta; // keeping "original initial x" (for now)
 
-    if(bad_u || u < log_q_cut) { /* e.g.
-		    qbeta(0.21, .001, 0.05)
-		    try "left border" quickly, i.e.,
-		    try at smallest positive number: */
+    if(bad_u || u < log_q_cut) {
+	/* e.g.
+	   qbeta(0.21, .001, 0.05)
+	   try "left border" quickly, i.e.,
+	   try at smallest positive number: */
 	w = pbeta_raw(DBL_very_MIN, pp, qq, TRUE, log_p);
 	if(w > (log_p ? la : a)) {
-	    R_ifDEBUG_printf(" quantile is left of smallest positive number; \"convergence\"\n");
+	    R_ifDEBUG_printf(
+		" quantile is left of %g; \"convergence\"\n", DBL_very_MIN);
 	    if(log_p || fabs(w - a) < fabs(0 - a)) { // DBL_very_MIN is better than 0
 		tx   = DBL_very_MIN;
 		u_n  = DBL_log_v_MIN;// = log(DBL_very_MIN)
@@ -373,8 +375,8 @@ qbeta_raw(double alpha, double p, double q, int lower_tail, int log_p,
 	    use_log_x = log_p; add_N_step = FALSE; goto L_return;
 	}
 	else {
-	    R_ifDEBUG_printf(" pbeta(smallest pos.) = %g <= %g  --> continuing\n",
-		     w, (log_p ? la : a));
+	    R_ifDEBUG_printf(" pbeta(%g, *) = %g <= %g (= %s) --> continuing\n",
+			     DBL_log_v_MIN, w, (log_p ? la : a), (log_p ? "la" : "a"));
 	    if(u  < DBL_log_v_MIN) {
 		u = DBL_log_v_MIN;// = log(DBL_very_MIN)
 		xinbta = DBL_very_MIN;
@@ -415,7 +417,8 @@ L_Newton:
 
 	for (i_pb=0; i_pb < 1000; i_pb++) {
 	    // using log_p == TRUE  unconditionally here
-	    // FIXME: if exp(u) = xinbta underflows to 0, like different formula pbeta_log(u, *)
+	    /* FIXME: if exp(u) = xinbta underflows to 0,
+	     *  want different formula pbeta_log(u, ..) */
 	    y = pbeta_raw(xinbta, pp, qq, /*lower_tail = */ TRUE, TRUE);
 
 	    /* w := Newton step size for   L(u) = log F(e^u)  =!= 0;   u := log(x)
@@ -423,29 +426,30 @@ L_Newton:
 	     *   =  (L(.) - la)*F(.) / {F'(e^u) * e^u } =
 	     *   =  (L(.) - la) * e^L(.) * e^{-log F'(e^u) - u}
 	     *   =  ( y   - la) * e^{ y - u -log F'(e^u)}
-		and  -log F'(x)= -log f(x) =  + logbeta + (1-p) log(x) + (1-q) log(1-x)
-			       = logbeta + (1-p) u + (1-q) log(1-e^u)
-	     */
+	     and  -log F'(x)= -log f(x) = - -logbeta + (1-p) log(x) + (1-q) log(1-x)
+	                                = logbeta + (1-p) u + (1-q) log(1-e^u)
+	    */
 	    w = (y == ML_NEGINF) // y = -Inf  well possible: we are on log scale!
 		? 0. : (y - la) * exp(y - u + logbeta + r * u + t * R_Log1_Exp(u));
 	    if(!R_FINITE(w))
 		break;
 	    if (i_pb >= n_N && w * wprev <= 0.)
 		prev = fmax2(fabs(adj),fpu);
-	    R_ifDEBUG_printf("N(i=%2d): u=%#20.16g, pb(e^u)=%#12.6g, w=%#15.9g, %s prev=%11g,",
-			     i_pb, u, y, w, (w * wprev <= 0.) ? "new" : "old", prev);
+	    R_ifDEBUG_printf(
+		"N(i=%2d): u=%#20.16g, pb(e^u)=%#15.9g, w=%#15.9g, %s prev=%g,",
+		i_pb, u, y, w,
+		(i_pb >= n_N && w * wprev <= 0.) ? "new" : "old", prev);
 	    g = 1;
 	    for (i_inn=0; i_inn < 1000; i_inn++) {
 		adj = g * w;
-		// take full Newton steps at the beginning; only then safe guard:
-		if (i_pb < n_N || fabs(adj) < prev) {
+		// safe guard (here, from the very beginning)
+		if (fabs(adj) < prev) {
 		    u_n = u - adj; // u_{n+1} = u_n - g*w
 		    if (u_n <= 0.) { // <==> 0 <  xinbta := e^u  <= 1
 			if (prev <= acu || fabs(w) <= acu) {
-			    /* R_ifDEBUG_printf(" -adj=%g, %s <= acu  ==> convergence\n", */
-			    /*	 -adj, (prev <= acu) ? "prev" : "|w|"); */
-			    R_ifDEBUG_printf(" it{in}=%d, -adj=%g, %s <= acu  ==> convergence\n",
-					     i_inn, -adj, (prev <= acu) ? "prev" : "|w|");
+		 	    R_ifDEBUG_printf(
+				" it{in}=%d, -adj=%g, %s <= acu  ==> convergence\n",
+				i_inn, -adj, (prev <= acu) ? "prev" : "|w|");
 			    goto L_converged;
 			}
 			// if (u_n != ML_NEGINF && u_n != 1)
@@ -466,58 +470,62 @@ L_Newton:
 	    wprev = w;
 	} // for(i )
 
-    } else
+    } else { // "normal scale" Newton
 
-    for (i_pb=0; i_pb < 1000; i_pb++) {
-	y = pbeta_raw(xinbta, pp, qq, /*lower_tail = */ TRUE, log_p);
-	// delta{y} :   d_y = y - (log_p ? la : a);
+	for (i_pb=0; i_pb < 1000; i_pb++) {
+	    y = pbeta_raw(xinbta, pp, qq, /*lower_tail = */ TRUE, log_p);
+	    // delta{y} :   d_y = y - (log_p ? la : a);
 #ifdef IEEE_754
-	if(!R_FINITE(y) && !(log_p && y == ML_NEGINF))// y = -Inf  is ok if(log_p)
+	    if(!R_FINITE(y) && !(log_p && y == ML_NEGINF))// y = -Inf  is ok if(log_p)
 #else
-	if (errno)
+	    if (errno)
 #endif
-	{ // ML_ERR_return_NAN :
-	    ML_ERROR(ME_DOMAIN, "");
-	    qb[0] = qb[1] = ML_NAN; return;
-	}
-
-
-	/* w := Newton step size  (F(.) - a) / F'(.)  or,
-	 * --   log: (lF - la) / (F' / F) = exp(lF) * (lF - la) / F'
-	 */
-	w = log_p
-	    ? (y - la) * exp(y + logbeta + r * log(xinbta) + t * log1p(-xinbta))
-	    : (y - a)  * exp(    logbeta + r * log(xinbta) + t * log1p(-xinbta));
-	if (i_pb >= n_N && w * wprev <= 0.)
-	    prev = fmax2(fabs(adj),fpu);
-	R_ifDEBUG_printf("N(i=%2d): x0=%#17.15g, pb(x0)=%#17.15g, w=%#17.15g, %s prev=%g,",
-			 i_pb, xinbta, y, w, (w * wprev <= 0.) ? "new" : "old", prev);
-	g = 1;
-	for (i_inn=0; i_inn < 1000;i_inn++) {
-	    adj = g * w;
-	    // take full Newton steps at the beginning; only then safe guard:
-	    if (i_pb < n_N || fabs(adj) < prev) {
-		tx = xinbta - adj; // x_{n+1} = x_n - g*w
-		if (0. <= tx && tx <= 1.) {
-		    if (prev <= acu || fabs(w) <= acu) {
-			R_ifDEBUG_printf(" it{in}=%d, delta(x)=%g, %s <= acu  ==> convergence\n",
-					 i_inn, -adj, (prev <= acu) ? "prev" : "|w|");
-			goto L_converged;
-		    }
-		    if (tx != 0. && tx != 1)
-			break;
+		{ // ML_ERR_return_NAN :
+		    ML_ERROR(ME_DOMAIN, "");
+		    qb[0] = qb[1] = ML_NAN; return;
 		}
+
+
+	    /* w := Newton step size  (F(.) - a) / F'(.)  or,
+	     * --   log: (lF - la) / (F' / F) = exp(lF) * (lF - la) / F'
+	     */
+	    w = log_p
+		? (y - la) * exp(y + logbeta + r * log(xinbta) + t * log1p(-xinbta))
+		: (y - a)  * exp(    logbeta + r * log(xinbta) + t * log1p(-xinbta));
+	    if (i_pb >= n_N && w * wprev <= 0.)
+		prev = fmax2(fabs(adj),fpu);
+	    R_ifDEBUG_printf(
+		"N(i=%2d): x0=%#17.15g, pb(x0)=%#15.9g, w=%#15.9g, %s prev=%g,",
+		i_pb, xinbta, y, w,
+		(i_pb >= n_N && w * wprev <= 0.) ? "new" : "old", prev);
+	    g = 1;
+	    for (i_inn=0; i_inn < 1000;i_inn++) {
+		adj = g * w;
+		// take full Newton steps at the beginning; only then safe guard:
+		if (i_pb < n_N || fabs(adj) < prev) {
+		    tx = xinbta - adj; // x_{n+1} = x_n - g*w
+		    if (0. <= tx && tx <= 1.) {
+			if (prev <= acu || fabs(w) <= acu) {
+			    R_ifDEBUG_printf(" it{in}=%d, delta(x)=%g, %s <= acu  ==> convergence\n",
+					     i_inn, -adj, (prev <= acu) ? "prev" : "|w|");
+			    goto L_converged;
+			}
+			if (tx != 0. && tx != 1)
+			    break;
+		    }
+		}
+		g /= 3;
 	    }
-	    g /= 3;
-	}
-	R_ifDEBUG_printf(" it{in}=%d, delta(x)=%g\n", i_inn, tx - xinbta);
-	if (fabs(tx - xinbta) <= 4e-16 * (tx + xinbta)) // "<=" : (.) == 0
-	    goto L_converged;
-	xinbta = tx;
-	if(tx == 0) // "we have lost"
-	    break;
-	wprev = w;
-    }
+	    R_ifDEBUG_printf(" it{in}=%d, delta(x)=%g\n", i_inn, tx - xinbta);
+	    if (fabs(tx - xinbta) <= 4e-16 * (tx + xinbta)) // "<=" : (.) == 0
+		goto L_converged;
+	    xinbta = tx;
+	    if(tx == 0) // "we have lost"
+		break;
+	    wprev = w;
+	} // for( i_pb ..)
+
+    } // end{else : normal scale Newton}
 
     /*-- NOT converged: Iteration count --*/
     warned = TRUE;
@@ -526,8 +534,8 @@ L_Newton:
 L_converged:
     log_ = log_p || use_log_x; // only for printing
     R_ifDEBUG_printf(" %s: Final delta(y) = %g%s\n",
-	     warned ? "_NO_ convergence" : "converged",
-	     y - (log_ ? la : a), (log_ ? " (log_)" : ""));
+		     warned ? "_NO_ convergence" : "converged",
+		     y - (log_ ? la : a), (log_ ? " (log_)" : ""));
     if((log_ && y == ML_NEGINF) || (!log_ && y == 0)) {
 	// stuck at left, try if smallest positive number is "better"
 	w = pbeta_raw(DBL_very_MIN, pp, qq, TRUE, log_);
@@ -539,12 +547,12 @@ L_converged:
     }
     else if(!warned && (log_ ? fabs(y - la) > 3 : fabs(y - a) > 1e-4)) {
 	if(!(log_ && y == ML_NEGINF &&
-	    // e.g. qbeta(-1e-10, .2, .03, log=TRUE) cannot get accurate ==> do NOT warn
+	     // e.g. qbeta(-1e-10, .2, .03, log=TRUE) cannot get accurate ==> do NOT warn
 	     pbeta_raw(DBL_1__eps, // = 1 - eps
 		       pp, qq, TRUE, TRUE) > la + 2))
 	    MATHLIB_WARNING2( // low accuracy for more platform independent output:
-    "qbeta(a, *) =: x0 with |pbeta(x0,*%s) - alpha| = %.5g is not accurate",
-	    (log_ ? ", log_" : ""), fabs(y - (log_ ? la : a)));
+		"qbeta(a, *) =: x0 with |pbeta(x0,*%s) - alpha| = %.5g is not accurate",
+		(log_ ? ", log_" : ""), fabs(y - (log_ ? la : a)));
     }
 L_return:
     if(give_log_q) { // ==> use_log_x , too
@@ -569,8 +577,9 @@ L_return:
 		    ? (y - la) * exp(y + logbeta + r * log(xinbta) + t * log1p(-xinbta))
 		    : (y - a)  * exp(    logbeta + r * log(xinbta) + t * log1p(-xinbta));
 		tx = xinbta - w;
-		R_ifDEBUG_printf(
-		    "Final Newton correction(non-log scale): xinbta=%.16g, y=%g, w=%g. => new tx=%.16g\n",
+		R_ifDEBUG_printf(" Final Newton correction(non-log scale):\n"
+								   //   \n  xinbta=%.16g
+				 "  xinbta=%.16g, y=%g, w=-Delta(x)=%g. \n=> new x=%.16g\n",
 		    xinbta, y, w, tx);
 	    } else {
 		if(swap_tail) {
@@ -582,7 +591,7 @@ L_return:
 	    }
 	}
 	if(swap_tail) {
-	    qb[0] = 1 - tx;	qb[1] = tx;
+	    qb[0] = 1 - tx; qb[1] = tx;
 	} else {
 	    qb[0] = tx;	qb[1] = 1 - tx;
 	}
